--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.1.0",
     "@angular/localize": "~13.1.0",
     "@angular/material": "^13.3.1",
@@ -28,6 +29,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.0.1",
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.11",
     "jquery": "^3.6.0",
     "ng-circle-progress": "^1.6.0",
     "rxjs": "~7.4.0",
